# rust-web-benchmarks

./: .gitmodules  bench_numa.sh  bench_with_metrics.sh
benchmark/: Cargo.toml
benchmark/hello-world/axum/: Cargo.toml
benchmark/hello-world/axum/src/: main.rs
benchmark/hello-world/hyper/: Cargo.toml  bench_rewrk.sh  bench_stealing_strategies.sh
benchmark/hello-world/hyper/src/: main.rs
benchmark/hello-world/poem/: Cargo.toml
benchmark/hello-world/poem/src/: main.rs
benchmark/hello-world/rocket/: Cargo.toml
benchmark/hello-world/rocket/src/: main.rs
benchmark/hello-world/salvo/: Cargo.toml
benchmark/hello-world/salvo/src/: main.rs
benchmark/hello-world/viz/: Cargo.toml
benchmark/hello-world/viz/src/: main.rs
benchmark/hello-world/warp/: Cargo.toml
benchmark/hello-world/warp/src/: main.rs
