[package]
name = "hello-world-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-metrics = { git = "https://github.com/jschwe/tokio-metrics", branch = "steal_operations",  features = ["rt"], optional = true}

[features]
metrics = ["tokio-metrics"]
